# earcut-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: Test.yml
benches/: benchmark.rs
examples/: example.rs
src/: lib.rs  utils3d.rs  utils_3d.rs
tests/: fixture.rs  simple.rs
tests/fixtures/: touching-holes2.json  touching-holes3.json  touching-holes4.json  touching-holes5.json
