[package]
name = "earcut-rs"
version = "0.3.0"
edition = "2021"
authors = ["Taku Fukada <naninunenor@gmail.com>", "MIERUNE Inc. <info@mierune.co.jp>"]
license-file = "LICENSE.txt"

[dependencies]
num-traits = "0.2.18"

[dev-dependencies]
serde_json = { version = "1.0.115", features = ["float_roundtrip"] }
serde = { version = "1.0.197", features = ["derive"] }
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
