[package]
name = "earcut"
version = "0.3.4"
edition = "2021"
description = "A Rust port of the Earcut polygon triangulation library"
authors = ["Taku Fukada <naninunenor@gmail.com>", "MIERUNE Inc. <info@mierune.co.jp>"]
license = "MIT"
repository = "https://github.com/MIERUNE/earcut-rs"
categories = ["graphics", "science"]

[dependencies]
num-traits = "0.2"

[dev-dependencies]
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde = { version = "1.0", features = ["derive"] }
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
