[package]
name = "earcut"
version = "0.4.1"
edition = "2021"
description = "A Rust port of the Earcut polygon triangulation library"
authors = ["Taku Fukada <naninunenor@gmail.com>", "MIERUNE Inc. <info@mierune.co.jp>"]
license = "ISC"
repository = "https://github.com/MIERUNE/earcut-rs"
categories = ["graphics", "science", "no-std"]

[dependencies]
num-traits = { version = "0.2", no-default-features = true }

[dev-dependencies]
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde = { version = "1.0", features = ["derive"] }
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
